--- a/static/portfolio.css
+++ b/static/portfolio.css
@@ -6,3 +6,14 @@ table, th, td {
     border-bottom: 1px solid grey;
     border-collapse: collapse;
 }
+
+h2, h3 {
+    border-bottom: none;
+
+}
+
+pre {
+    background-color: #f5f5f5;
+    border: 1px solid #808080;
+    padding: 8px 4px; 
+}
