--- a/templates/index.html
+++ b/templates/index.html
@@ -38,4 +38,9 @@
 <ul>
     <li><a href="/portfolio-data-engineer">Data Engineer</a></li>
 </ul -->
+
+<h3>Article</h3>
+<ul>
+    <li><a href="/articles/analogue">Toward Analogue Design for the Digital Domain</a></li>
+</ul>
 {% endblock %}
