--- a/templates/terms.html
+++ b/templates/terms.html
@@ -2,13 +2,15 @@
 
 {% block head %}
 
+<link rel="stylesheet" href="{{ url_for('static', filename='portfolio.css') }}">
+
 {% endblock %}
 
 {% block body %}
 <h2>Terms of Use</h2>
-<p>Internet Web Page is provided as-is and without warranty. </p>
+<p>The web application Shannon Douglas Ware (shannonware.com) is provided as-is and without warranty. </p>
 <h3>Advisory</h3>
-<p>This site is being run in <bold>Experimental Mode</bold> and may have an adverse effect on the space-time continuium.</bold></p>
+<p>Google anomysed usage statistics cookies are used on this site.</p>
 <h3>Disclaimer</h3>
 <p>To the extent permitted by law, we exclude all warranties, express, statutory, or impled.
     We expressly disclaim the warranties or conditions of noninfringement, merchantability, and fitness for a particular purpose.
