Add concepts to SQL one page.

--- a/templates/one-page-sql.html
+++ b/templates/one-page-sql.html
@@ -16,6 +16,9 @@
 
     <h3>Concepts</h3>
     <p>SQL operates in a variety of environments, including the script engine of the underlying database, an IDE, or a specialised external tool for interacting with a database.  </p>
+    <p>One table per modelled entity. An entity occurrence is once record.</p>
+    <p>An attribute is stored for an entity, and corresponds to a field. Ab attribute cab ibkt appear in one entity, unless it is the key attribute in another entity.</p>
+    <p>A relationship is established by a foreign key in one entity linking to the primary key in another.</p>
 
 
 
