Create first skills based resume for SQL

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,12 @@
 <h2 class="exo-terzo">Hire me!</h2>
     <p>Shannon has a demonstrated ability reduce cost while improving production service quality.</p>
     <p>Shannon has a deep knowledge of industry analytical tools and methods including open source (Python) integration with proprietary tools (Microsoft).</p>
+
+<h3>Resume: Skills Based</h3>
+<ul>
+    <li><a href="/resume-sql">SQL Developer</a></li>
+</ul>
+
 <h3>Curriculum Vitae</h3>
 <ul>
     <li><a href="/curriculum-vitae">Shannon Ware CV</a></li>
