Create page and outline for article flask heroku

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,11 @@
     <li><a href="/portfolio-data-engineer">Data Engineer</a></li>
 </ul -->
 
+<h3>Technical Writing</h3>
+<ul>
+    <li><a href="/articles/flask-heroku">Getting Started with Flask on Heroku</a></li>
+</ul>
+
 <h3>Article</h3>
 <ul>
     <li><a href="/articles/analogue">Toward Analogue Design for the Digital Domain</a></li>
