Trial repair on flask-heroku article. Remove eircode.

--- a/templates/one-page-javascript.html
+++ b/templates/one-page-javascript.html
@@ -56,25 +56,22 @@
 
     <h3>Loops</h3>
 
-    <pre>
-    for (variable of iterable) {
-        // code block to be executed
-      } 
-    </pre>
-    <pre>
-    const letters = new Set(["a","b","c"]);
+    <pre>for (variable of iterable) {
+    // code block to be executed
+} 
 
-    for (const x of letters) {
-        // code block to be executed
-    }
+const letters = new Set(["a","b","c"]);
+
+for (const x of letters) {
+    // code block to be executed
+}</pre>
 
     <h3>DOM</h3>
 
-    <p>
-        document.getElementById("demo").innerHTML = "Hello JavaScript";<br />
-        document.getElementById("demo").style.fontSize = "35px";<br />
-        document.getElementById("demo").style.display = "none";<br />
-    </p>
+    <pre>document.getElementById("demo").innerHTML = "Hello JavaScript";
+document.getElementById("demo").style.fontSize = "35px";
+document.getElementById("demo").style.display = "none";
+    </pre>
 </section>
 
 {% endblock %}
