--- a/templates/resume-sql.html
+++ b/templates/resume-sql.html
@@ -10,7 +10,7 @@
 
 <p id="address">
     <span>Mobile: 083-441-0345 | photius@shannonware.com</span>
-    <span>The Shop, Gerahies, Bantry, Co. Cork P75 AK37, Ireland</span>
+    <span>Bantry, Co. Cork, Ireland</span>
     <span>https://www.shannonware.com | https://www.terzotechnical.com | https://github.com/spycebot/</span>
 </p>
 <h2>Personal Profile</h2>
