--- a/templates/curriculum-vitae.html
+++ b/templates/curriculum-vitae.html
@@ -11,7 +11,7 @@
 <p id="occupation">Curriculum Vitae</p>
 <p id="address">
     <span>Mobile: 083-441-0345 | photius@shannonware.com</span>
-    <span>The Shop, Gerahies, Bantry, Co. Cork P75 AK37, Ireland</span>
+    <span>Bantry, Co. Cork, Ireland</span>
     <span>https://www.shannonware.com</span>
     <!-- span>https://www.terzotechnical.com</span -->
     <span>https://github.com/spycebot/</span>
