Revise SQL developer resume with skills categories.

--- a/templates/resume-sql.html
+++ b/templates/resume-sql.html
@@ -31,8 +31,19 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
             <li>Productivity: Office, Excel, Word, Team, PowerPoint, OBS, Audacity, Davinci Resolve, PyAudio</li>
         </ul>
 </section>
-<h3>Projects</h3>
 
+<h3>Projects</h3>
+<p class="entry_headline">
+    <span class="entry_title">EVMotors Vehicle Management System</span>
+    <span class="entry_description">Course Project - Naas, Kildare</span>
+    <span class="entry_date">April 2025</span>
+</p>
+<ul>
+    <li>Wrote and submitted C# code in the .NET framework</li>
+    <li>Facilitated the division of work evenly among team members</li>
+    <li>Collaborated in the design and implementation of SQL database according to specification</li>
+    <li>Leveraged GitHub to facilitate integration of code from multiple developers on team</li>
+</ul>
 <p class="entry_headline">
     <span class="entry_title">Ventriloquist</span>
     <span class="entry_description">Personal Project - Bantry, Cork</span>
@@ -63,7 +74,76 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
     <li>Created and enhanced detailed breakdown of project tasks across teams (functional and application)</li>
 </ul>
 
-<h3>Experience</h3>
+<h3>Education</h3>
+<table>
+    <tr>
+        <td>NOV 2024 - Oct 2025</td>
+        <td>Software Developer CENIT College - Naas, Kildare </td>
+    </tr>
+    <tr>
+        <td>Sep 2007</td>
+        <td>Ontario College Graduate Certificate, Game Design - George Brown College – Toronto, Ontario</td>
+    </tr>
+</table>
+
+<h3>Work History</h3>
+<table>
+    <tr>
+        <td>Sep 2022 - May 2024</td>
+        <td>Junior Service Architect Fujitsu Ireland - Swords, Dublin</td>
+    </tr>
+    <tr>
+        <td>Sep 2017 - Sep 2022</td>
+        <td>Technical Services Specialist Fujitsu Ireland - Swords, Dublin</td>
+    </tr>
+    <tr>
+        <td>Nov 2015 - Feb 2017 </td>
+        <td>Customer Service and Business Data Technician Moravia IT s.r.o. - Cork City</td>
+    </tr>
+</table>
+
+<h3>Customer Service </h3>
+<ul>
+    <li>Experience in Completing point of sale transactions with handheld payment devices</li>
+    <li>Experience in ensuring customer goods are maintaining all required quality standards and specifications</li>
+    <li>Extensive customer service and support experience</li>
+    <li>Ability to assist end-users with online account merchant, banking, and e-government account configuration</li>
+    <li>Experienced in communication as a liaison between production teams and senior management</li>
+</ul>
+
+<h3>Administration</h3>
+<ul>
+    <li>Fulfilled VAT tax filing and compliance procedures; design, build and maintain technical knowledge base</li>
+    <li>Designed built and deployed Flask apps to Heroku for advertisement and lead generation</li>
+    <li>Automate export and Excel manipulation of daily report data</li>
+    <li>Junior Project Manager: Drive production task estimation, allocation, and fulfilment follow-up</li>
+</ul>
+
+<h3>Technical Support</h3>
+<ul>
+    <li>Delivered technical support proactively in a fast-paced production environment</li>
+    <li>Tracked service levels and service performance in monthly and impromptu reporting</li>
+    <li>Analysed tabular data and query results to track shipping documentation, delayed or missing stock</li>
+    <li>Designed and built Python apps to better manipulate system data, achieving reduction of costs from service downtime</li>
+    <li>L2 Help Desk: Provided hands-on support; conducted customer issue root cause investigation; executed service delivery audit processes</li>
+    <li>L3 Help Desk: Made accurate records of service performance for monthly reports</li>
+    <li>Ability to be firm in a calm and supportive attitude </li>
+    <li>Execute backend query, render results as meaningful data for data-driven decision making</li>
+    <li>Review and validate plans for disaster recovery (data centre redundancy); proactive participation in fire drills</li>
+    <li>Articulated written justification of evaluation decision made according to continuously evolving criteria</li>
+    <li>Exhibited energy and commitment to teamwork and workflow development</li>
+</ul>
+
+<h3>Teaching and Language Skills</h3>
+
+<ul>
+    <li>Coordinated broad and in-depth analysis of Japanese language technical documents; made qualitative evaluation of translation products whether fit for delivery</li>
+    <li>Implemented process improvements to accuracy in technical translation</li>
+    <li>Designed and developed Python code to reduce cost in phonetic transcription</li>
+    <li>Exhibited energy and commitment to teamwork and workflow development</li>
+</ul>
+
+<!-- h3>Experience</h3>
 
 <p class="entry_headline">
     <span class="entry_title">Principal</span>
@@ -74,7 +154,7 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
     <li>Fulfilled VAT tax filing and compliance procedures; design, build and maintain technical knowledge base</li>
     <!-- li>Champion website accessibility and full stack web development</li -->
     <!-- li>Designed and developed Windows apps, including C# desktop front-end for PostgreSQL DB</li -->
-    <li>Designed built and deployed Flask apps to Heroku for advertisement and lead generation</li>
+    <!-- li>Designed built and deployed Flask apps to Heroku for advertisement and lead generation</li>
     <li>Complete point of sale transactions with handheld payment device.</li>
     <li>Ensure customer goods maintain all required quality standards and specifications</li>
     <li>Assist end-users with online account merchant, banking, and e-government account configuration</li>
@@ -205,7 +285,7 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
     <li>First had training in occupational Japanese in commercial environments</li>
     <li>In depth analysis of Japanese economic and cultural trends</li>
     <li>Japanese work environment teamwork exercises</li>
-</ul>
+</ul -->
 
 <div id="epilogue" class="two-column">
     <h3>Certifications</h3>
