--- a/static/terzo.css
+++ b/static/terzo.css
@@ -57,17 +57,12 @@ h2 {
 
 }
 
-h2, h3 {
-    border-bottom: 1px solid gray;
-    max-width: 50%;
-}
-
 ul {
     margin: 0px 0px 8px 16px;
     padding: 0px;
 }
 
-li {
+li, td {
     font-family: "Smooch Sans", monospace;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -176,6 +171,11 @@ li {
 
 /* Tablet */
 @media all and (min-width: 481px) and (max-width: 800px) {
+    h2, h3 {
+        border-bottom: 1px solid gray;
+        max-width: 50%;
+    }
+
     button {
         width: 10em;
     }
@@ -187,6 +187,11 @@ li {
 
 /* Desktop */
 @media only screen and (min-width:801px) {
+    h2, h3 {
+        border-bottom: 1px solid gray;
+        max-width: 50%;
+    }
+
     button {
         width: 10em;
     }
