Add math and numeracy to SQL resume; further testing of Flask-Heroku article.

--- a/templates/resume-sql.html
+++ b/templates/resume-sql.html
@@ -102,6 +102,41 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
     </tr>
 </table>
 
+<h3>Mathmatics, Bookeeping, Numeracy</h3>
+<ul>
+    <li>Ability to demonstrate logical, stepwise analysis both verbally and in writing</li>
+    <li>Comfortable with advanced Excel functions such as FORECAST.LINEAR, AGGREGATE and XLOOKUP</li>
+    <li>Experience with cash accounting, opening and closing of till, and cash drops</li>
+    <li>Self taught with respect to analytical geometry, trigonometry and calculus</li>
+</ul>
+
+<h3>Data Science and Statistics</h3>
+<ul>
+    <li>Comfortable with Exploratory Data Analysis models and techniques</li>
+    <li>Expert and practical experience with data cleaning and data normalisation</li>
+    <li>Experience with Python data visualisation library matplotlib</li>
+    <li>Experience with data visualsation in Tableau including late stage SQL queries</li>
+    <li>Experience with data visualisation in MS Power BI</li>
+    <li>Utilised Pandas in LLM data processing pipeline (Hugging Face)</li>
+</ul>
+
+<h3>SQL and Database Management</h3>
+<ul>
+    <li>Writing and analysis of advanced SQL queries (joins, stored procedures)</li>
+    <li>Data cleaning</li>
+    <li>Data Exploration</li>
+    <li>DDL and database optimisation</li>
+    <li>Data redundancy, backup, and long term storage</li>
+</ul>
+
+<h3>Desktop and Web Application Development</h3>
+<ul>
+    <li>C# and .NET</li>
+    <li>Python deskop application (Tkinter, wxPython, )</li>
+    <li>Developed front-end ap0plications using HTML, CSS, JavaScript (jQuery, 3D.js)</li>
+    <li>Utilised CDNs for enhanced JavaScript functionality</li>
+</ul>
+
 <h3>Customer Service </h3>
 <ul>
     <li>Experience in Completing point of sale transactions with handheld payment devices</li>
