--- a/templates/resume-sql.html
+++ b/templates/resume-sql.html
@@ -51,7 +51,7 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
 </p>
 <ul>
     <li>Designed and built real time speech-to-text and text-to-speech application </li>
-    <li>Utilized websockets for distributed blocking and on-blocking app behavior</li>
+    <li>Utilized websockets for distributed blocking and on-blocking app behaviour</li>
 </ul>
 
 <p class="entry_headline">
@@ -61,7 +61,7 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
 </p>
 <ul>
     <li>Coded up text-to-speech AI voice synthesis app to serve as verbal sock puppets</li>
-    <li>Made critical evaluation of text-to-speech technology and user interface blocking behavior</li>
+    <li>Made critical evaluation of text-to-speech technology and user interface blocking behaviour</li>
 </ul>
 
 <p class="entry_headline">
@@ -102,12 +102,12 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
     </tr>
 </table>
 
-<h3>Mathmatics, Bookeeping, Numeracy</h3>
+<h3>Mathematics, Bookkeeping, Numeracy</h3>
 <ul>
     <li>Ability to demonstrate logical, stepwise analysis both verbally and in writing</li>
     <li>Comfortable with advanced Excel functions such as FORECAST.LINEAR, AGGREGATE and XLOOKUP</li>
     <li>Experience with cash accounting, opening and closing of till, and cash drops</li>
-    <li>Self taught with respect to analytical geometry, trigonometry and calculus</li>
+    <li>Self-taught with respect to analytical geometry, trigonometry and calculus</li>
 </ul>
 
 <h3>Data Science and Statistics</h3>
@@ -115,7 +115,7 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
     <li>Comfortable with Exploratory Data Analysis models and techniques</li>
     <li>Expert and practical experience with data cleaning and data normalisation</li>
     <li>Experience with Python data visualisation library matplotlib</li>
-    <li>Experience with data visualsation in Tableau including late stage SQL queries</li>
+    <li>Experience with data visualisation in Tableau including late-stage SQL queries</li>
     <li>Experience with data visualisation in MS Power BI</li>
     <li>Utilised Pandas in LLM data processing pipeline (Hugging Face)</li>
 </ul>
@@ -123,24 +123,23 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
 <h3>SQL and Database Management</h3>
 <ul>
     <li>Writing and analysis of advanced SQL queries (joins, stored procedures)</li>
-    <li>Data cleaning</li>
-    <li>Data Exploration</li>
-    <li>DDL and database optimisation</li>
-    <li>Data redundancy, backup, and long term storage</li>
+    <li>Possesses a comprehensive data cleaning toolset across multiple platforms (Excel, SSMS)</li>
+    <li>Adept at data exploration able to probe and document datasets for shape, range, and scope</li>
+    <li>Demonstrated ability to utilise DDL in database optimisation</li>
+    <li>Extensive workplace experience in managing data redundancy, backup, and long-term storage</li>
 </ul>
 
 <h3>Desktop and Web Application Development</h3>
 <ul>
-    <li>C# and .NET</li>
-    <li>Python deskop application (Tkinter, wxPython, )</li>
-    <li>Developed front-end ap0plications using HTML, CSS, JavaScript (jQuery, 3D.js)</li>
-    <li>Utilised CDNs for enhanced JavaScript functionality</li>
+    <li>Adept at C# code development in the context of the .NET framework</li>
+    <li>Developed Python desktop applications (Tkinter) for use in Fujitsu service delivery work environment</li>
+    <li>Developed front-end applications using HTML, CSS, JavaScript (jQuery, 3D.js)</li>
+    <li>Able to utilise CDNs for enhanced JavaScript functionality</li>
 </ul>
 
 <h3>Customer Service </h3>
 <ul>
     <li>Experience in Completing point of sale transactions with handheld payment devices</li>
-    <li>Experience in ensuring customer goods are maintaining all required quality standards and specifications</li>
     <li>Extensive customer service and support experience</li>
     <li>Ability to assist end-users with online account merchant, banking, and e-government account configuration</li>
     <li>Experienced in communication as a liaison between production teams and senior management</li>
@@ -162,11 +161,11 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
     <li>Designed and built Python apps to better manipulate system data, achieving reduction of costs from service downtime</li>
     <li>L2 Help Desk: Provided hands-on support; conducted customer issue root cause investigation; executed service delivery audit processes</li>
     <li>L3 Help Desk: Made accurate records of service performance for monthly reports</li>
-    <li>Ability to be firm in a calm and supportive attitude </li>
+    <!-- li>Ability to be firm in a calm and supportive attitude </li>
     <li>Execute backend query, render results as meaningful data for data-driven decision making</li>
     <li>Review and validate plans for disaster recovery (data centre redundancy); proactive participation in fire drills</li>
     <li>Articulated written justification of evaluation decision made according to continuously evolving criteria</li>
-    <li>Exhibited energy and commitment to teamwork and workflow development</li>
+    <li>Exhibited energy and commitment to teamwork and workflow development</li -->
 </ul>
 
 <h3>Teaching and Language Skills</h3>
