--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,6 @@
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no" />
     <meta name="google-adsense-account" content="ca-pub-5714407334718985">
-    <!-- OK link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css" -->
     <script src="{{ url_for('static', filename='terzo.js') }}"></script>
     <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Special+Elite&display=swap" rel="stylesheet">
@@ -17,17 +16,13 @@
     {% block head %}{% endblock %}
 </head>
 <body>
-    <div id="banner"><a href="/" class="header_one"><h1 class="syne-mono-regular">Shannon Douglas Ware</h1></a></div>
+    <div id="banner"><a href="/" class="header_one"><h1>Shannon Douglas Ware</h1></a></div>
     
     <div id="content">
     {% block body %}{% endblock %}
     </div>
 
     <div id="footer">
-        <!--
-        Copyright 2024-2025 Terzo Technical
-        
-        <br> -->
         &#62;
         <a href="/terms">Terms</a> &#60;&#62;
         <a href="/privacy">Privacy</a> &#60;&#62;
