--- a/templates/resume-sql.html
+++ b/templates/resume-sql.html
@@ -158,7 +158,7 @@ Seeking a reputable employer on a growth trajectory, with whom we can have a mut
     <li>Delivered technical support proactively in a fast-paced production environment</li>
     <li>Tracked service levels and service performance in monthly and impromptu reporting</li>
     <li>Analysed tabular data and query results to track shipping documentation, delayed or missing stock</li>
-    <li>Designed and built Python apps to better manipulate system data, achieving reduction of costs from service downtime</li>
+    <li>Designed and built Python apps to better manipulate system data, achieving reducing costs from service downtime</li>
     <li>L2 Help Desk: Provided hands-on support; conducted customer issue root cause investigation; executed service delivery audit processes</li>
     <li>L3 Help Desk: Made accurate records of service performance for monthly reports</li>
     <!-- li>Ability to be firm in a calm and supportive attitude </li>
