--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='terzo.css') }}">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5714407334718985"
      crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5714407334718985"
+    crossorigin="anonymous"></script>
     {% block head %}{% endblock %}
 </head>
 <body>
