Add Python One Page

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
     <li><a href="/one-page-csharp">One Page: C#</a></li>
     <li><a href="/one-page-javascript">One Page: JavaScript</a></li>
     <li><a href="/one-page-sql">One Page: SQL</a></li>
+    <li><a href="/one-page-python">One Page: Python</a></li>
 </ul>
 <!-- h3>Resumes</h3>
 <ul>
