Fix server side error (no copy)

--- a/templates/article-flask-heroku.html
+++ b/templates/article-flask-heroku.html
@@ -10,7 +10,7 @@
 
 <pre>Deployment Test</pre>
 
-<!-- section class="columnar">
+<section class="columnar">
     <p>Heroku is a powerful app service platform that gives you highly responsive, global reach for just a few dollars a month.
         Flask is a web micro-platform that allows you to build responsive custom apps quickly. 
         Guilding apps in Flask and deploying them to Heroku is a great solution, provided you know the caveats.
@@ -47,6 +47,6 @@
 
     <h3>Conclusion</h3>
     <p>Flask leverages the Heroku technical stack in an intuitive and straightforward way.</p>
-</section -->
+</section>
 
 {% endblock %}
